# DiVA-streamlit-fe

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  anjay.json  encoded.txt  pyproject.toml
config/: settings.py  view.py
scripts/: mount_nas.sh  run_extractor.sh  run_server.sh  run_test.sh  umount_nas.sh
services/: diva.py
src/: main.py  schema.py  secret.py  streamlit.py
utils/: diva.py  executor.py  helper.py  logger.py  nas.py  render.py  streamlit.py  streamlit_conf.py  tes.py
